Fixed footer issues, Found new issue that on Gits host page, selfportait.png is not showing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -154,7 +154,8 @@ a:active {
 
 footer {
   background-color: #888888;
-  margin-top: 40px
+  position: absolute;
+  bottom: 0;
   max-height: 80px;
   min-height: 80px;
   width: 100%;
